# light_text_process

./: .gitignore  AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml
docs/: baseline_inventory.md  light_text_process_web_boundary.md  native_cutover_release_notes.md  native_migration_inventory.md  num2words_multilingual_policy.md  performance.md  release_notes.md  replacement_matrix.md  route_ownership.md  vendor_preserving_enhancement_plan.md  vendor_replacement_roadmap.md
light_text_process/: __init__.py  capabilities.py  paths.py  processor.py  schemas.py
products/light_text_process_web/: AGENTS.md  README.md  app.py  product_paths.py  pyproject.toml  start.bat  start.sh
products/light_text_process_web/api/: __init__.py  routes.py
products/light_text_process_web/docs/: api_contract.md
products/light_text_process_web/static/css/: app.css
products/light_text_process_web/static/data/: examples.json
products/light_text_process_web/static/js/: app.js
products/light_text_process_web/templates/: index.html
products/light_text_process_web/templates/partials/: capabilities.html
products/light_text_process_web/tests/: __init__.py  asgi_client.py  test_examples_data.py  test_http_surface.py  test_native_api.py  test_scaffold.py
scripts/: benchmark_routes.py  cache_maintenance.py  fun_text_processing_oracle.py  validate_rules.py
tests/: test_architecture_boundaries.py  test_cache_maintenance.py  test_capabilities.py  test_en_itn_rule_helpers.py  test_en_tn_rule_helpers.py  test_itn_option_passthrough.py  test_oracle_classification.py  test_rule_cases_data.py  test_runtime_engines.py  test_services.py  test_zh_itn_rule_helpers.py  test_zh_tn_rule_helpers.py
todo/: TODO_00_BASELINE_AND_SCOPE.md  TODO_00_BASELINE_INVENTORY.md  TODO_00_VENDOR_BASELINE.md  TODO_01_BOUNDARY_AND_SCOPE.md  TODO_01_ENGINE_ABSTRACTION.md  TODO_01_ORACLE_DIFF_GATE.md  TODO_01_PUBLIC_CAPABILITIES.md  TODO_02_GOLDEN_CORPUS_EXPANSION.md  TODO_02_PRODUCT_SCAFFOLD.md  (+26 more)
(+49 files in other folders)
