[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "light-text-process"
version = "0.1.0"
description = "Standalone TN, ITN, and number-to-words text processing engine"
requires-python = ">=3.12"
dependencies = [
  "inflect",
  "joblib",
  "num2words",
  "pydantic>=2",
  "pynini>=2.1.7,<2.2",
  "PyYAML",
  "regex",
  "tqdm",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [".", "third_party"]
include = [
  "light_text_process*",
  "fun_text_processing*",
]
namespaces = true

[tool.setuptools.package-data]
"fun_text_processing" = ["**/*.far", "**/*.fst", "**/*.md", "**/*.tsv", "**/*.txt"]

[tool.uv.extra-build-dependencies]
pynini = ["Cython"]
