[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "light-text-process"
version = "0.1.0"
description = "Standalone TN, ITN, and number-to-words text processing engine"
requires-python = ">=3.12"
dependencies = [
  "num2words",
  "pydantic>=2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "light_text_process*",
]
namespaces = true
